--- a/styles/index.css
+++ b/styles/index.css
@@ -73,7 +73,7 @@ main {
 
 /* ---------------------------------------------- */
 .my-grid {
-     @apply max-w-max mx-auto grid grid-cols-1 gap-7 md:grid-cols-2 xl:grid-cols-3 my-24 py-6 justify-items-center;
+     @apply  mx-auto grid grid-cols-1 gap-7 md:grid-cols-2 xl:grid-cols-3 my-24 py-6 justify-items-center;
 }
 /* ---------------------------------------------- */
 .my-grid-contact {
@@ -82,7 +82,7 @@ main {
 /* ---------------------------------------------- */
 
 .project-section {
-     @apply container relative w-96 h-72 md:w-80 md:h-64 shadow-xl border-4 items-center justify-center mx-auto;
+     @apply container block relative w-96 h-72 md:w-80 md:h-64 shadow-xl border-4 items-center justify-center mx-auto;
 }
 /* ---------------------------------------------- */
 .project-title {
