switching back navbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -108,6 +108,9 @@ main {
 .contact-links {
      @apply my-5 f-ubuntu;
 }
+.contact-links div {
+     @apply underline
+}
 /* ---------------------------------------------- */
 /* ---------------------------------------------- */
 /* ---------------------------------------------- */
