--- a/styles/index.css
+++ b/styles/index.css
@@ -8,10 +8,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quattrocento&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Karla&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap');
 
 main {
      font-family: "Karla", sans-serif;
 }
+
 .f-ubuntu {
      font-family: "Ubuntu", sans-serif;
 }
@@ -34,17 +36,20 @@ main {
 
      /* ---------------------------------------------- */
 
-     .FooterLink {
-          @apply w-10 h-10 p-2 rounded-full;
+     .Contact-Icon {
+          @apply w-10 h-10 p-1 rounded-full;
      }
-     .FooterLink--linkedin {
-          @apply text-blue-400;
+     .Contact-Icon:hover {
+          @apply border-solid border-4;
      }
-     .FooterLink--gmail {
-          @apply text-red-400;
+     .Contact-Icon-linkedin:hover {
+          @apply border-blue-400 ;
      }
-     .FooterLink--github {
-          @apply text-gray-500;
+     .Contact-Icon-gmail:hover {
+          @apply border-red-400;
+     }
+     .Contact-Icon-github:hover {
+          @apply border-gray-500;
      }
 }
 
@@ -90,7 +95,7 @@ main {
 }
 /* ---------------------------------------------- */
 .project-description {
-     @apply tracking-tight f-ubuntu;
+     @apply tracking-tight;
 }
 /* ---------------------------------------------- */
 
@@ -98,19 +103,17 @@ main {
      @apply flex flex-row items-center justify-between mt-6;
 }
 .project-link {
-     @apply  text-black text-xs md:text-sm border-2 border-gray-300 py-1 px-1 rounded-lg inline-flex items-center hover:bg-yellow-300 hover:border-transparent ;
+     @apply  text-black text-xs md:text-sm border-2 border-gray-300 py-1 px-1 rounded-lg inline-flex items-center hover:border-yellow-300 ;
 }
 .project-link-icon {
      @apply inline w-3 h-3 md:w-5 md:h-5 ;
 }
 
 /* ---------------------------------------------- */
-.contact-links {
+.Contact-links  {
      @apply my-5 f-ubuntu;
 }
-.contact-links div {
-     @apply underline
-}
+
 /* ---------------------------------------------- */
 /* ---------------------------------------------- */
 /* ---------------------------------------------- */
